--- a/ex1.html
+++ b/ex1.html
@@ -23,8 +23,8 @@ div#users-contain table td, div#users-contain table th { border: 1px solid #eee;
 </style>
 </head>
 <body>
-<div id="dialog-forma" title="Market Launch"  style="display:none">
-<form id="dialog-form" >
+<div id="dialog-forma"   style="display:none">
+<form id="dialog-form" title="Market Launch">
 <fieldset>
           <label for="title">Title</label>
           <input type="text" name="title" id="title" value=""  type="text" required/>
